# CheckCBox_Compiler

./: .gitignore  README.md
clang/: CMakeLists.txt
clang-tools-extra/clang-tidy/bugprone/: MacroParenthesesCheck.cpp
clang/lib/: CMakeLists.txt
clang/lib/3C/: Utils.cpp
clang/lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTImporter.cpp  Decl.cpp  Expr.cpp  ExprConstant.cpp  ExprUtils.cpp  NestedNameSpecifier.cpp  RecordLayoutBuilder.cpp  Stmt.cpp  StmtPrinter.cpp  Type.cpp  TypePrinter.cpp
clang/lib/Basic/: IdentifierTable.cpp
clang/lib/CheckMate/: ABounds.cpp  AVarBoundsInfo.cpp  AVarGraph.cpp  ArrayBoundsInferenceConsumer.cpp  CMakeLists.txt  CastPlacement.cpp  CheckMate.cpp  CheckMateInteractiveData.cpp  CheckMateStats.cpp  CheckedRegions.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  ConstraintVariables.cpp  Constraints.cpp  ConstraintsGraph.cpp  CtxSensAVarBounds.cpp  DeclRewriter.cpp  IntermediateToolHook.cpp  MappingVisitor.cpp  MultiDecls.cpp  PersistentSourceLoc.cpp  PlantC4.cpp  ProgramInfo.cpp  RewriteUtils.cpp  StructInit.cpp  TypeVariableAnalysis.cpp  Utils.cpp
clang/lib/CheckMate/C4/: .ls  C3.opam  README.md  exec.sh  twin.txt  txt.txt
clang/lib/CheckMate/C4/lib/: dune
clang/lib/CheckMate/C4/src/: dune  lexer.mll  main.ml  parser.mly  parser_alt.mly
clang/lib/CheckMate/C4/test/: dune
clang/lib/CheckMate/C4/tests/checked_cases/: arr.c  assume.c  forany.c  fptr.c  inst.c
clang/lib/CodeGen/: Address.h  BackendUtil.cpp  CGBuilder.h  CGCall.cpp  CGDecl.cpp  CGDynamicCheck.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGExprConstant.cpp  CGExprScalar.cpp  CGRecordLayoutBuilder.cpp  CGStmt.cpp  CGValue.h  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenTypes.cpp  CodeGenTypes.h  TargetInfo.cpp
clang/lib/Edit/: RewriteObjCFoundationAPI.cpp
clang/lib/Format/: FormatToken.h  TokenAnnotator.cpp  UnwrappedLineFormatter.cpp  UnwrappedLineParser.cpp
clang/lib/Frontend/: InitPreprocessor.cpp
clang/lib/Headers/: CMakeLists.txt  stdtainted.h
clang/lib/Index/: IndexSymbol.cpp
clang/lib/Lex/: Lexer.cpp
clang/lib/Parse/: ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseObjc.cpp  ParseOpenMP.cpp  ParsePragma.cpp  ParseStmt.cpp  ParseTemplate.cpp  ParseTentative.cpp  Parser.cpp
clang/lib/Sema/: BoundsUtils.cpp  CheckedCInterop.cpp  DeclSpec.cpp  Scope.cpp  Sema.cpp  SemaAttr.cpp  SemaBounds.cpp  SemaCast.cpp  SemaChecking.cpp  SemaCodeComplete.cpp  SemaCoroutine.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaFixItUtils.cpp  SemaInit.cpp  SemaStmt.cpp  SemaTemplate.cpp  SemaTemplateVariadic.cpp  SemaType.cpp  TreeTransform.h
clang/lib/TT/: ABounds.cpp  AVarBoundsInfo.cpp  AVarGraph.cpp  ArrayBoundsInferenceConsumer.cpp  CMakeLists.txt  CastPlacement.cpp  CheckedRegions.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  TT.cpp  (+15 more)
clang/test/: lit.cfg.py
clang/tools/: CMakeLists.txt
clang/tools/CheckMate/: CMakeLists.txt  CheckMateStandalone.cpp  README.md
compiler-rt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
compiler-rt/include/: Makefile  cmake_install.cmake
compiler-rt/lib/: Makefile  cmake_install.cmake
compiler-rt/tools/: Makefile  cmake_install.cmake
libc/include/: __llvm-libc-common.h
libc/spec/: spec.td
llvm/: CMakeLists.txt
llvm/projects/: CMakeLists.txt
llvm/projects/checkcbox-wrapper/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
llvm/projects/checkcbox-wrapper/checkcbox/tests/parsing/: tainted_array_declarations.c
(+298 files in other folders)
