# This file exists only to support convenient installation of C3's OCaml
# dependencies using `opam install --deps-only .`. C3 itself currently is not
# designed to be installed as an opam package.

opam-version: "2.0"
name: "C3"
version: "0"
synopsis: "Tool to convert Checked C code back to plain C"
maintainer: "Correct Computation <info@correctcomputation.com>"
depends: [
  "dune"
  # We saw a problem with menhir version 20211230 that we have not yet
  # investigated. C3 seems to work with menhir version 20211128, so pin it for
  # now.
  "menhir" {= "20211128"}
]
# Prevent C3 from being installed as an opam package.
build: ["false"]
